force-app/main/default/objects/Assigment_Task__c/Assigment_Task__c.object-meta.xml
<CustomObject>
    <label>Assigment Task</label>
    <nameField>
        <label>Assigment Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assigment Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>