force-app/main/default/objects/Assigment_Task__c/fields/Init__c.field-meta.xml
<CustomField>
    <fullName>Init__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Not Init&quot;) &amp;&amp; ReportedHours__c = 0, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Init</label>
    <type>Checkbox</type>
</CustomField>