force-app/main/default/objects/Assigment_Task__c/fields/ReportedHours__c.field-meta.xml
<CustomField>
    <fullName>ReportedHours__c</fullName>
    <label>ReportedHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>