force-app/main/default/objects/Assigment_Task__c/fields/ResourceProject__c.field-meta.xml
<CustomField>
    <fullName>ResourceProject__c</fullName>
    <label>ResourceProject</label>
    <referenceTo>ResourceProject__c</referenceTo>
    <relationshipLabel>Assigment Tasks</relationshipLabel>
    <relationshipName>Assigment_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>