force-app/main/default/objects/Assigment_Task__c/validationRules/verify_creation_task.validationRule-meta.xml
<ValidationRule>
    <fullName>verify_creation_task</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(ResourceProject__r.Project__r.State__c, &apos;In Progress&apos;))</errorConditionFormula>
    <errorMessage>The Proyect State must be &quot;In Progress&quot; to create a Task</errorMessage>
</ValidationRule>